Add MCU Narkoba

--- a/hidup sehat/form/laboratorium.html
+++ b/hidup sehat/form/laboratorium.html
@@ -53,43 +53,61 @@
               <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
-          <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="led">LED</label>
-            <div class="col-md-8">
-              <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
-            </div>
-          </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="eritrosit">Eritrosit</label>
             <div class="col-md-8">
               <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" required="">
             </div>
           </div>
-    <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hitung-jenis">Hitung Jenis</label>
-            <div class="col-md-8">
-              <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control" required="">
-            </div>
-          </div>
-    <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="MCV">MCV</label>
-            <div class="col-md-8">
-              <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
-            </div>
-          </div>
-    <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="MCH">MCH</label>
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="MCV">MCV</label>
               <div class="col-md-8">
-                <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
+                <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
               </div>
             </div>
-           <div class="form-group row">
-                   <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
-                   <div class="col-md-8">
-                     <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
-                   </div>
-                 </div>
-
+      <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="MCH">MCH</label>
+                <div class="col-md-8">
+                  <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
+                </div>
+              </div>
+          <h5>Hitung Jenis</h5>
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="basofil">Basofil</label>
+            <div class="col-md-8">
+               <input id="basofil" name="basofil" type="number" placeholder="%" class="form-control" required="">
+            </div>
+         </div>
+         <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="eosinofil">Eosinofil</label>
+            <div class="col-md-8">
+               <input id="eosinofil" name="eosinofil" type="number" placeholder="%" class="form-control" required="">
+            </div>
+         </div>
+         <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="neutrofil">Neutrofil</label>
+          <div class="col-md-8">
+             <input id="neutrofil" name="neutrofil" type="number" placeholder="%" class="form-control" required="">
+          </div>
+       </div>
+       <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="limfosit">Limfosit</label>
+        <div class="col-md-8">
+           <input id="limfosit" name="limfosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="monosit">Monosit</label>
+        <div class="col-md-8">
+           <input id="monosit" name="monosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+      <label class="col-md-4 col-form-label" for="led">LED</label>
+      <div class="col-md-8">
+         <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
+      </div>
+   </div>
                  <h5>Lemak Darah</h5>
                  <div class="form-group row">
                          <label class="col-md-4 col-form-label" for="kolesterol">Kolesterol total</label>
@@ -129,6 +147,12 @@
                            <input id="hba1c" name="hba1c" type="number" placeholder="" class="form-control" required="">
                          </div>
                        </div>
+                       <div class="form-group row">
+                        <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
+                        <div class="col-md-8">
+                          <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
+                        </div>
+                      </div>
 
                        <h5>Fungsi Ginjal</h5>
             <div class="form-group row">
