--- a/preemployee/wanita/form/laboratorium.html
+++ b/preemployee/wanita/form/laboratorium.html
@@ -52,61 +52,154 @@
               <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
-          <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="led">LED</label>
-            <div class="col-md-8">
-              <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
-            </div>
-          </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="eritrosit">Eritrosit</label>
             <div class="col-md-8">
               <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" required="">
             </div>
           </div>
-    <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hitung-jenis">Hitung Jenis</label>
-            <div class="col-md-8">
-              <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control" required="">
-            </div>
-          </div>
-    <div class="form-group row">
-          <label class="col-md-4 col-form-label" for="MCV">MCV</label>
-            <div class="col-md-8">
-              <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
-            </div>
-          </div>
-    <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="MCH">MCH</label>
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="MCV">MCV</label>
               <div class="col-md-8">
-                <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
+                <input id="MCV" name="MCV" type="number" placeholder="fl" class="form-control" required="">
               </div>
             </div>
+      <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="MCH">MCH</label>
+                <div class="col-md-8">
+                  <input id="MCH" name="MCH" type="number" placeholder="pg" class="form-control" required="">
+                </div>
+              </div>
+          <h5>Hitung Jenis</h5>
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="basofil">Basofil</label>
+            <div class="col-md-8">
+               <input id="basofil" name="basofil" type="number" placeholder="%" class="form-control" required="">
+            </div>
+         </div>
+         <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="eosinofil">Eosinofil</label>
+            <div class="col-md-8">
+               <input id="eosinofil" name="eosinofil" type="number" placeholder="%" class="form-control" required="">
+            </div>
+         </div>
+         <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="neutrofil">Neutrofil</label>
+          <div class="col-md-8">
+             <input id="neutrofil" name="neutrofil" type="number" placeholder="%" class="form-control" required="">
+          </div>
+       </div>
+       <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="limfosit">Limfosit</label>
+        <div class="col-md-8">
+           <input id="limfosit" name="limfosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="monosit">Monosit</label>
+        <div class="col-md-8">
+           <input id="monosit" name="monosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+      <label class="col-md-4 col-form-label" for="led">LED</label>
+      <div class="col-md-8">
+         <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
+      </div>
+   </div>
            <div class="form-group row">
-                   <label class="col-md-4 col-form-label" for="gds"><h5>Gula Darah Sewaktu</h5></label>
+                   <label class="col-md-4 col-form-label" for="gds">Gula Darah Sewaktu</label>
                    <div class="col-md-8">
                      <input id="gds" name="gds" type="number" placeholder="g/dl" class="form-control" required="">
                    </div>
                  </div>
-      <h5>Imunoserologi</h5>
+                 <h5>Urinalisa Makroskopik</h5>
                  <div class="form-group row">
-                         <label class="col-md-4 col-form-label" for="hemoglobin">HbsAg</label>
-                         <div class="col-md-8">
-                           <input id="hbsag" name="hbsag" type="text" placeholder="" class="form-control" required="">
-                         </div>
-                       </div>
+                    <label class="col-md-4 col-form-label" for="warna">Warna</label>
+                    <div class="col-md-8">
+                       <input id="warna" name="warna" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="urinalisa">Urinalisa</label>
+                    <label class="col-md-4 col-form-label" for="kejernihan">Kejernihan</label>
                     <div class="col-md-8">
-                      <input id="urinalisa" name="urinalisa" type="number" placeholder="pH" class="form-control" required="">
+                       <input id="kejernihan" name="kejernihan" type="text" placeholder="" class="form-control" required="">
                     </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-md-4 col-form-label" for="gravidex">Gravidex Test</label>
+                 </div>
+                 <h5>Kimia Urin</h5>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="beratjenis">Berat Jenis</label>
                     <div class="col-md-8">
-                      <input id="gravidex" name="gravidex" type="text" placeholder="g/dl" class="form-control" required="">
+                       <input id="beratjenis" name="beratjenis" type="number" placeholder="" class="form-control" required="">
                     </div>
-                  </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="ph">pH</label>
+                    <div class="col-md-8">
+                       <input id="ph" name="ph" type="number" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="protein">protein</label>
+                    <div class="col-md-8">
+                       <input id="protein" name="protein" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="glucosaurin">Glukosa</label>
+                    <div class="col-md-8">
+                       <input id="glucosaurin" name="glucosaurin" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="keton">Keton</label>
+                    <div class="col-md-8">
+                       <input id="keton" name="keton" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="bilirubin">bilirubin</label>
+                    <div class="col-md-8">
+                       <input id="bilirubin" name="bilirubin" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="urobilinogen">urobilinogen</label>
+                    <div class="col-md-8">
+                       <input id="urobilinogen" name="urobilinogen" type="number" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="darahurin">Darah</label>
+                    <div class="col-md-8">
+                       <input id="darahurin" name="darahurin" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="leukositurin">Leukosit</label>
+                    <div class="col-md-8">
+                       <input id="leukositurin" name="leukositurin" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="nitrit">Nitrit</label>
+                    <div class="col-md-8">
+                       <input id="nitrit" name="nitrit" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <h5>Imunoserologi</h5>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="hbsag">HbsAG</label>
+                    <div class="col-md-8">
+                       <input id="hbsag" name="hbsag" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
+                 <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="gravidex">Gravidex Tes</label>
+                    <div class="col-md-8">
+                       <input id="gravidex" name="gravidex" type="text" placeholder="" class="form-control" required="">
+                    </div>
+                 </div>
 
               </fieldset>
 
