--- a/umroh/form/laboratorium.html
+++ b/umroh/form/laboratorium.html
@@ -51,22 +51,47 @@
               <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
+          <h5>Hitung Jenis</h5>
           <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="led">LED</label>
+            <label class="col-md-4 col-form-label" for="basofil">Basofil</label>
             <div class="col-md-8">
-              <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
+               <input id="basofil" name="basofil" type="number" placeholder="%" class="form-control" required="">
             </div>
+         </div>
+         <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="eosinofil">Eosinofil</label>
+            <div class="col-md-8">
+               <input id="eosinofil" name="eosinofil" type="number" placeholder="%" class="form-control" required="">
+            </div>
+         </div>
+         <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="neutrofil">Neutrofil</label>
+          <div class="col-md-8">
+             <input id="neutrofil" name="neutrofil" type="number" placeholder="%" class="form-control" required="">
           </div>
+       </div>
+       <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="limfosit">Limfosit</label>
+        <div class="col-md-8">
+           <input id="limfosit" name="limfosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="monosit">Monosit</label>
+        <div class="col-md-8">
+           <input id="monosit" name="monosit" type="number" placeholder="%" class="form-control" required="">
+        </div>
+     </div>
+     <div class="form-group row">
+      <label class="col-md-4 col-form-label" for="led">LED</label>
+      <div class="col-md-8">
+         <input id="led" name="led" type="number" placeholder="mm/jam" class="form-control" required="">
+      </div>
+   </div>
     <div class="form-group row">
           <label class="col-md-4 col-form-label" for="eritrosit">Eritrosit</label>
             <div class="col-md-8">
               <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" required="">
-            </div>
-          </div>
-    <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hitung-jenis">Hitung Jenis</label>
-            <div class="col-md-8">
-              <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control" required="">
             </div>
           </div>
     <div class="form-group row">
