--- a/custom/form/identitas.html
+++ b/custom/form/identitas.html
@@ -71,7 +71,7 @@
         <label class="col-md-4 col-form-label" for="penjamin">Penjamin</label>
         <div class="col-md-8">
           <select id="penjamin" name="penjamin" class="form-control" >
-            <option value="pribadi">Pribadi</option>
+            <option value="Pribadi">Pribadi</option>
             <option value="asuransi">Asuransi</option>
           </select>
         </div>
