--- a/preemployee/pria/form/identitas.html
+++ b/preemployee/pria/form/identitas.html
@@ -56,7 +56,7 @@
         <div class="col-md-8">
           <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" required="">
             <option value="laki-laki">Laki-laki</option>
-            <option value="perempuan">Perempuan</option>
+            <!-- <option value="perempuan">Perempuan</option> -->
           </select>
         </div>
       </div>
