--- a/preemployee/wanita/form/identitas.html
+++ b/preemployee/wanita/form/identitas.html
@@ -55,7 +55,7 @@
         <label class="col-md-4 col-form-label" for="jenis_kelamin">Jenis Kelamin</label>
         <div class="col-md-8">
           <select id="jenis_kelamin" name="jenis_kelamin" class="form-control" required="">
-            <option value="laki-laki">Laki-laki</option>
+            <!-- <option value="laki-laki">Laki-laki</option> -->
             <option value="perempuan">Perempuan</option>
           </select>
         </div>
