--- a/basic/form/laboratorium.html
+++ b/basic/form/laboratorium.html
@@ -48,13 +48,13 @@
          <div class="form-group row">
             <label class="col-md-4 col-form-label" for="trombosit">Trombosit</label>
             <div class="col-md-8">
-               <input id="trombosit" name="trombosit" type="number" placeholder="µL" class="form-control" required="">
+               <input id="trombosit" name="trombosit" type="number" placeholder="x 10³ μL" class="form-control" required="">
             </div>
          </div>
          <div class="form-group row">
             <label class="col-md-4 col-form-label" for="leukosit">Leukosit</label>
             <div class="col-md-8">
-               <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
+               <input id="leukosit" name="leukosit" type="number" placeholder="x 10³ μL " class="form-control" required="">
             </div>
          </div>
          <div class="form-group row">
@@ -67,13 +67,6 @@
             <label class="col-md-4 col-form-label" for="eritrosit">Eritrosit</label>
             <div class="col-md-8">
                <input id="eritrosit" name="eritrosit" type="number" placeholder="" class="form-control" required="">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label class="col-md-4 col-form-label" for="hitung-jenis">Hitung Jenis</label>
-            <div class="col-md-8">
-               <input id="hitung-jenis" name="hitung-jenis" type="number" placeholder="µL" class="form-control"
-                  required="">
             </div>
          </div>
          <div class="form-group row">
