--- a/umroh/form/laboratorium.html
+++ b/umroh/form/laboratorium.html
@@ -44,13 +44,13 @@
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="trombosit">Trombosit</label>
         <div class="col-md-8">
-          <input id="trombosit" name="trombosit" type="number" placeholder="µL" class="form-control" required="">
+          <input id="trombosit" name="trombosit" type="number" placeholder="x 10³ μL" class="form-control" required="">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-md-4 col-form-label" for="leukosit">Leukosit</label>
         <div class="col-md-8">
-          <input id="leukosit" name="leukosit" type="number" placeholder="µL" class="form-control" required="">
+          <input id="leukosit" name="leukosit" type="number" placeholder="x 10³ μL " class="form-control" required="">
         </div>
       </div>
       <h5>Hitung Jenis</h5>
